add gmail and images link

--- a/google.html
+++ b/google.html
@@ -6,6 +6,12 @@
 	</head>
 	<body>
 		<div>
+				<div id=top>
+						<a class=toplink href="gmail">Gmail</a>
+						<a class=toplink href="images">Images</a>
+				</div>
+		</div>
+		<div>
 			<img id="googlelogo" src=https://cdn.vox-cdn.com/thumbor/ixTYpUJGa9fjLn6POCIvwAwG17w=/1400x0/filters:no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/6466217/fixed-google-logo-font.png>
 		</div>
 	</body>
